--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,7 @@
   "authors": [
     "Mark Smits"
   ],
+  "homepage": "http://exmg.github.io/exm-token-input/",
   "repository": {
     "type": "git",
     "url": "git://github.com/exmg/exm-token-input.git"
